<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".recipe_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/urlText"
                android:layout_width="wrap_content"
                android:ems="10"
                android:layout_height="64dp"
                android:autofillHints=""
                android:hint="@string/urlHint"
                android:inputType="textUri"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:layout_alignParentLeft="true"
                tools:text="@string/urlText" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnGetPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="HandleClicks"
                android:text="@string/getPage"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipeFormHint"
            android:text="@string/recipeFormHint"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnSaveRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="HandleClicks"
            android:text="@string/save_recipe"
            android:ems="8"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/foodImage"
                android:scaleType="centerCrop"
                android:src="@color/grey"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/imageHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/imageHint"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/recipeFields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeName"
                android:hint="@string/recipeNameHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/recipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeIngredients"
                android:hint="@string/recipeIngredientsHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/recipeDirections"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeDirections"
                android:hint="@string/recipeDirectionsHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>