<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"

    tools:context=".recipe_entry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/foodImage"
                android:scaleType="centerCrop"
                android:src="@color/grey"
                android:layout_gravity="center"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/recipeFields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeName"
                android:hint="@string/recipeNameHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/recipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeIngredients"
                android:hint="@string/recipeIngredientsHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/recipeDirections"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recipeDirections"
                android:hint="@string/recipeDirectionsHint"
                android:ellipsize="none"
                android:longClickable="true"
                android:textIsSelectable="true"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>